@@ -33,16 +33,16 @@ AUX oyranos-0.9.5-buildsystem-r1.patch 6897 SHA256 91b9c94476ac189964c801a30cbb7
 DIST oyranos-0.9.4.tar.bz2 1632276 SHA256 6dcf7f8bef0720077ee55484a5b507ba5f049094f21fbbd2752f2ed120c0768a SHA512 23ded5bac4c16aba8a2d4266981e6ad53cfa2ce720d03751625552a873de8311dda721eb8dd732860ae0a0fcdfc7346f92aaeb8bde281ceeb4895f154d6e6c59 WHIRLPOOL 7ec535e326bf102eb0d154ac995b42b4a8b23a606c35417727b54653424807c47c5a4cf7ece6411627dcffd7ca5d8b1ddc588d97d1a02fb079d27d3d20efd2a5
 DIST oyranos-0.9.5.tar.bz2 1800977 SHA256 75c2681e6d95cb969336f1e9bdfe12a85ae6a5bd438573d7d2955b37ea466e40 SHA512 18ab90f6d80db2c3d3fda64f80d01be2c83c9e86f14b3a3310eea5dd921b7376afb894fea987357b573a4247d5c285bc9f6ccc044e21dbe7da92f25373b9fd99 WHIRLPOOL 32440b53b7da82baa8299c570c3456c35cbffb17998836240640011ff5a13981e7219213b00c0d9afc367f74bf35ffb297363285d060bd72f73f8f75a18ed025
 DIST oyranos-0.9.5.tar.gz 1801954 SHA256 7cf8d41c3019e91608837cc40de801348b35963853e6d62b3e6dcd46bf24cafa SHA512 836bb7324cd300608cb13381704b6b28aae93485140d2e3f6c7dc21f1d35f9acc44427c861814b13c60cc499ba5495068b1069f6843909744f18ac8998d17ae9 WHIRLPOOL 69b676c6cae8eb878b5e0ea73358ffc59ba78541c9de89d10667a52141d0b37399ea733e1e2aa69bf90208a12e93c63b0b8bb63e6eb2efccc0151b745469491f
-EBUILD oyranos-0.9.4-r2.ebuild 3572 SHA256 1705c6e9a33838ab187148c6e2f9d8b353c8a8abf0a94c90e96bbe389d855cf2 SHA512 a4f23a93d3b88a12eb54a8620f5a368ab73ddf3ae72ce1cce6f5da9e24d3ea38ed51529ad4017861624037a2e230b902c62e0f7bc7e4c07a75a5d4e9d7128f59 WHIRLPOOL 5ecdfaf59e56663c684e9d33eded5590196daaf7753c287b50d70164792edd11a352389a65a75257439124cc1717bf36020a2d62efdce9f690583f7c738b7231
-EBUILD oyranos-0.9.5-r1.ebuild 3245 SHA256 9d1d57f89318a42f17c97498b2cc1fda2dda760b4a48f7e413af110cc25c5fa5 SHA512 d98690fb1d35a7103e06994fb95cb78dcbb68b4f20fe9e98d88efbb9964a5484838eb661025a6345da38475915d793ddd3ad7c85b336a0ca3645b225af4f9279 WHIRLPOOL 76579cb06e61081ecfdf3ff0c1ed2147dca55e8b35c4c814f874f77e4467086ef5695c89482769f2d62ee39cc938f5abb247d3541d09085b3eb282cc7765ab6c
-EBUILD oyranos-0.9.5.ebuild 2622 SHA256 fe7581a365b476d227c2511337fdaebc2c1c0cba7873fe721eaf0cc1013246f4 SHA512 0746ff90dc847fd9ef21acbd08173596c472079773a341a92444e7898165634cbcc9774f2874950daedaf11a93211696d356c01ea96c5f90e3e01daa45c9a94d WHIRLPOOL dca48d07b9f97de9a19bbe41d769de57f7a0ff1329e60c7235562e86cf60c5496dea00b0e538229cd04ee45e1aae4be8ad6d3ab1f607c8279f9f6c35f153cb52
+EBUILD oyranos-0.9.4-r2.ebuild 3574 SHA256 3251fafdb4f63fde0e8de8d06d686e2208988a77de973097cdeb53a760fc7ce8 SHA512 2bdd5afc9e187e31eb60d571d0ae0fe4be95016babc535cd3c93953304bf516593908514211d759e8f2a28b034c2db0925e3e065a685277fb243159bf2335142 WHIRLPOOL d47a72fb35cb01ca38fc8fafbd7578d74de43147dd8fe76ba17cda662518dc41b151a54590078098689e1153cd7c11ec9a467bc9bc070082d20fe8607c1b7088
+EBUILD oyranos-0.9.5-r1.ebuild 3247 SHA256 4c6eeff1edd5a54e7a585c3be71090560c7ccba9b52380936472a5dbf5df4554 SHA512 a8482bcc9c3caf76d938b24648d2559d70dd18725a1bce32d661d6d826cd591f4ac625b4f09f7c8b6a8a2e15771a853272860e636f6493cd79bda52be15ac1a6 WHIRLPOOL 95f824136d60871fbdbf74762de3b56d5ab8f1ecbd1b17361328372434b07c64d8725567de9392b86b1cb9496ea140a9dcf305d129c9927df010ab48738fb96c
+EBUILD oyranos-0.9.5.ebuild 2624 SHA256 44f9eb3e7ae18ddf0a7ef6246f24e760e2b4521f8bd156f809868d15257fd78c SHA512 ce4342acc9436696fa84f96c5e29a427534132fe61f846bd958125e2ca17e56d8c8be400262ec6966432a08d70b804da5d93b0ab56ce0477aeb68a8c9c27900f WHIRLPOOL eafc2701bbfe3d79b8698a632ad9c057f064a1de5fe2488d759d053218cec4edad2d7f0803d795232fb8d8c20d2ced0bbe34b01e0adca6eacd9306c7d4f6d7c0
 EBUILD oyranos-9999.ebuild 3217 SHA256 f8be1438f73fd02007ec9046dbd14f99aabd34fb8e1ee6659621bd9a6ea24618 SHA512 a82ca6c71d3df91e1406cdd18a034f5e2642937730a21ff8703f473d41b9eaac7af8edce8f025b5b8389f8434658a5c13a12dbbd1f6229f1ad745ff24eea879e WHIRLPOOL 6afe96dc0a6af8d42c623c4af2e5541a10aa4c6876d3745034bdb9d381a0656e904a29ecd5a71bfb4845f5ae0878485e97480f666a7788330261d295b2abab9b
-MISC ChangeLog 7060 SHA256 2fae75b627b52a5273f505371a9c7605f957666452213f27ba9155549ed5e7dc SHA512 a1d3dc7f9ca57e0cdfe07bd222c6a8b1f5f85f8fcefb68b75b1c9eb8a4532eda576cf9570432f200568fa145dc50e8def2c4bdcf9da01fb78ba9de2ad097b050 WHIRLPOOL b53d763dc5e43315de96b0d3c934dd74fb4130a586f5eb7421ad207fe1f38a1d92f3c436e152291853cca1f8c8e53343b5397619f08ef7bbf3b50f715412f6a1
+MISC ChangeLog 7217 SHA256 429733c9b50e6effdf15df6618622ef2083795d843429078a88ac962f7f835cc SHA512 7dbf50e2a5643e0b0c36cbb22a31a6da2803d74113e81e3d6435a4b79660bd1c38c3e3688e8749e0df74f6d43e1c4a117ea5ed50fd14e14036d502f21c3ecea8 WHIRLPOOL e6193160f2e83551099fce4603876ebef1c0fc2d68fe84d8985ddca29a749cb88dc3a2796f760286c26213d2b09ec67f5beda95f4f0d4929c4bd3a87d8ea88b9
 MISC metadata.xml 313 SHA256 8fd011b20598a0bed2f4b91851d3f3454564d886b381bde65e67488e04ff907f SHA512 1eeb21e19aff71a6facb419f9661a9978a1a60d61027928933d03a7d6ebcd76bf86f1e0a867cbd27709a713df9232f63116b27a7b30055f535c0f0a31e6c973d WHIRLPOOL 2de1024abdbd3493e2a5cd976a2afd7bd1215ca665b01c5ba293cd88b1bf8211f131d63f602d436c5e3d312535ad3dece2290d4a23ff00789c6c95648816a271
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlXB9uoACgkQknrdDGLu8JBgQwEAk0L3jYPGyrEkJuCvf9+ZGMrk
-p8K2VzT2R8+737Z5GHoA/3EKizdxl7fwUJdyfzloYlxQNiuoR4QUwuS6GL9PSs9o
-=RggO
+iF4EAREIAAYFAlXDyW8ACgkQknrdDGLu8JD/SwD/VWK1msQRtsCJT7B+sO4hiP6T
+CNiksAYwKMlANQh+/PAA/RJBmxekTOG9hUO6LDRBb7pfBPd5islLxdX945i/2JOg
+=tERq
 -----END PGP SIGNATURE-----
